@@ -1,23 +1,9 @@
 package com.tutorhub.service.impl;
 
-import static com.tutorhub.testfactory.CourseTestFactory.getCourseTest;
-import static com.tutorhub.testfactory.ModuleTestFactory.getModuleTest;
-import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.*;
-import static org.mockito.Mockito.doAnswer;
-import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import com.tutorhub.exception.ResourceNotFoundException;
 import com.tutorhub.model.course.Module;
 import com.tutorhub.repository.ModuleRepository;
 import com.tutorhub.service.CourseService;
-import java.util.List;
-import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -27,13 +13,31 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 
+import java.util.List;
+import java.util.Optional;
+
+import static com.tutorhub.testfactory.CourseTestFactory.getCourseTest;
+import static com.tutorhub.testfactory.ModuleTestFactory.getModuleTest;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 @ExtendWith(MockitoExtension.class)
 public class ModuleServiceImplTest {
   private static final Long MODULE_ID = 1L;
   private static final Long COURSE_ID = 1L;
-  @Mock private ModuleRepository moduleRepository;
-  @InjectMocks private ModuleServiceImpl moduleService;
-  @Mock private CourseService courseService;
+  @Mock
+  private ModuleRepository moduleRepository;
+  @Mock
+  private CourseService courseService;
+  @InjectMocks
+  private ModuleServiceImpl moduleService;
 
   @Test
   void find() {
@@ -52,9 +56,13 @@ public class ModuleServiceImplTest {
 
   @Test
   void findByCourseIdAndId_withNotExistingId() {
-    doReturn(Optional.empty()).when(moduleRepository).findByCourseIdAndId(COURSE_ID, MODULE_ID);
+    doReturn(Optional.empty())
+        .when(moduleRepository)
+        .findByCourseIdAndId(COURSE_ID, MODULE_ID);
 
-    assertThrows(ResourceNotFoundException.class, () -> moduleService.find(COURSE_ID, MODULE_ID));
+    assertThrows(
+        ResourceNotFoundException.class,
+        () -> moduleService.find(COURSE_ID, MODULE_ID));
 
     verify(moduleRepository).findByCourseIdAndId(COURSE_ID, MODULE_ID);
   }
@@ -65,14 +73,17 @@ public class ModuleServiceImplTest {
 
     var page = PageRequest.of(1, 10, Sort.by("name"));
 
-    doReturn(expectedResult).when(moduleRepository).findAllByCourseId(COURSE_ID, page);
+    doReturn(expectedResult)
+        .when(moduleRepository)
+        .findAllByCourseId(COURSE_ID, page);
 
     var actualResult = moduleService.findAllPaged(COURSE_ID, page);
 
     assertAll(
         () -> assertEquals(1, actualResult.get().toList().size()),
         () ->
-            assertEquals(expectedResult.get().toList().get(0), actualResult.get().toList().get(0)));
+            assertEquals(expectedResult.get().toList().getFirst(),
+                actualResult.get().toList().getFirst()));
 
     verify(moduleRepository).findAllByCourseId(COURSE_ID, page);
   }
@@ -85,11 +96,11 @@ public class ModuleServiceImplTest {
     doReturn(course).when(courseService).getById(any());
 
     doAnswer(
-            invocationOnMock -> {
-              Module module = invocationOnMock.getArgument(0);
-              module.setId(MODULE_ID);
-              return module;
-            })
+        invocationOnMock -> {
+          Module module = invocationOnMock.getArgument(0);
+          module.setId(MODULE_ID);
+          return module;
+        })
         .when(moduleRepository)
         .save(expectedResult);
 
@@ -109,14 +120,17 @@ public class ModuleServiceImplTest {
     var moduleOnDb = getModuleTest(MODULE_ID);
     moduleOnDb.setName("Module");
     moduleOnDb.setCourse(getCourseTest(COURSE_ID));
-    doReturn(Optional.of(moduleOnDb)).when(moduleRepository).findByCourseIdAndId(COURSE_ID, MODULE_ID);
+
+    doReturn(Optional.of(moduleOnDb))
+        .when(moduleRepository)
+        .findByCourseIdAndId(COURSE_ID, MODULE_ID);
 
     when(moduleRepository.save(any())).thenAnswer(i -> i.getArguments()[0]);
 
     var module = getModuleTest(MODULE_ID);
     module.setName("New Module");
 
-    var actualResult = moduleService.update(COURSE_ID,module);
+    var actualResult = moduleService.update(COURSE_ID, module);
 
     assertAll(
         () -> assertEquals("New Module", actualResult.getName()),
